Bug 261803 - Fix scrolling of RenderListBox in vertical writing mode
Summary: Fix scrolling of RenderListBox in vertical writing mode
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-19 22:45 PDT by Aditya Keerthi
Modified: 2023-10-04 21:27 PDT (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aditya Keerthi 2023-09-19 22:45:58 PDT
SSIA
Comment 1 Radar WebKit Bug Importer 2023-09-19 22:46:28 PDT
<rdar://problem/115766417>
Comment 2 Aditya Keerthi 2023-10-03 21:24:33 PDT
Pull request: https://github.com/WebKit/WebKit/pull/18608
Comment 3 EWS 2023-10-04 21:27:41 PDT
Committed 268894@main (29d2da526a2e): <https://commits.webkit.org/268894@main>

Reviewed commits have been landed. Closing PR #18608 and removing active labels.